# Semantic-Graph-of-the-Financial-Knowledge-Base

./: .env.example  .gitignore  README.md  pyproject.toml
.obsidian/: app.json  core-plugins.json  graph.json  templates.json  workspace.json
config/: sources.example.yaml  watchlist.example.yaml  watchlist.yaml
docs/: architecture.md  horizon-adapter.md  obsidian-linking.md  product-spec.md  roadmap.md
knowledge/indexes/: README.md  health-check.md  industries.md  open-questions.md
knowledge/outputs/: README.md
knowledge/raw/: README.md
raw/: README.md
raw/horizon-reports/: 2026-07-16 华大基因 Horizon报告.md
raw/news/: 2026-07-16 美国放宽对阿联酋 AI 芯片与军备出口限制.md  2026-07-16 药物基因组学检测市场预计 2034 年前以 12%复合年增长率增长.md  2026-07-16 马其顿证券交易所将启动二十年来最大改革.md
src/semantic_graph_kb/: __init__.py  cli.py
templates/: 事件模板.md  公司模板.md  周报模板.md  日报模板.md
事件/: 2026-07-16 药物基因组学检测市场增长预期.md
产品/: 多组学科研服务.md  感染防控检测.md  生育健康检测.md  肿瘤基因检测.md  药物基因组学检测.md
公司/: 华大基因（300676.SZ）.md
政策/: 出生缺陷防控政策.md  医疗数据合规政策.md  基因检测监管政策.md
索引/: README.md  事件索引.md  产品索引.md  公司索引.md  政策索引.md  行业索引.md
行业/: 基因检测行业.md  生命科学服务行业.md  精准医疗行业.md
